# big-uint

./: .gitignore  CMakeLists.txt  notes.txt
Include/: __asm__add.hpp  __asm__div__u_ll.hpp  __asm__mul.hpp
Tests/: Big_uInt.cpp  __asm__add.cpp  __asm__add.s  __asm__add__O3.s  __asm__mul.cpp  symbols.txt
inc/: Big_uInt.hpp  __asm__add.hpp  __asm__div__u_ll.hpp  __asm__mul.hpp
inc/big_uint/: big_uint.hpp  types.hpp
inc/big_uint/add/: asm_add.hpp
inc/big_uint/div/: __asm__div__u_ll.hpp
inc/big_uint/mul/: __asm__mul.hpp
src/big_uint/add/: asm_add.cpp
tests/: __asm__add.cpp  asm_add.cpp
